<package format="2">
  <name>rospersp2equi</name>
  <version>0.0.1</version>
  <description>The rospersp2equi package</description>

  <maintainer email="grace@example.com">Your Name</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>per</build_depend>
  <build_depend>message_filters</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>per</exec_depend>
  <exec_depend>message_filters</exec_depend>

  <export>
  </export>
</package>
